@@ -94,7 +94,7 @@ else
 		if (!empty($error))
 			echo ErrorMessage($error, 'error');
 		
-		echo '<FORM ACTION="Modules.php?modname='.$_REQUEST['modname'].'&modfunc=update" METHOD="POST" enctype="multipart/form-data" onsubmit="if (document.getElementById(\'LOGO_FILE\').value) document.getElementById(\'loading\').innerHTML=\'<img src=assets/themes/'. Preferences('THEME') .'/spinning.gif />\';">';
+		echo '<FORM ACTION="Modules.php?modname='.$_REQUEST['modname'].'&modfunc=update" METHOD="POST" enctype="multipart/form-data" onsubmit="if (document.getElementById(\'LOGO_FILE\').value) document.getElementById(\'loading\').innerHTML=\'<span class=loading></span>\';">';
 	
 		if(AllowEdit())
 			DrawHeader('',SubmitButton(_('Save')));
